force-app/main/default/objects/Article__c/fields/Code_article_ERP__c.field-meta.xml
<CustomField>
    <fullName>Code_article_ERP__c</fullName>
    <externalId>true</externalId>
    <label>Code article ERP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>