force-app/main/default/objects/Article__c/fields/ctva__c.field-meta.xml
<CustomField>
    <fullName>ctva__c</fullName>
    <label>ctva</label>
    <length>30</length>
    <type>Text</type>
</CustomField>