force-app/main/default/objects/Article__c/fields/Distinct__c.field-meta.xml
<CustomField>
    <fullName>Distinct__c</fullName>
    <formula>TEXT(Entite_Juridique__c)&amp; &quot;_&quot; &amp; Code_article_ERP__c &amp; &quot;_&quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distinct</label>
    <type>Text</type>
</CustomField>