force-app/main/default/objects/Article__c/fields/Taux_unitaire__c.field-meta.xml
<CustomField>
    <fullName>Taux_unitaire__c</fullName>
    <label>Taux unitaire</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>