force-app/main/default/objects/Article__c/fields/TVA__c.field-meta.xml
<CustomField>
    <fullName>TVA__c</fullName>
    <label>TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>