force-app/main/default/objects/Article__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_article_ERP__c</columns>
    <columns>ctva__c</columns>
    <columns>Entite_Juridique__c</columns>
    <columns>TVA__c</columns>
    <columns>Distinct__c</columns>
    <columns>Taux_unitaire__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>